# evm_java

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
app/:  clock1.js  Http_upload.js  TEST_CONSOLE.JS  TEST_FS7.JS  app_consol.js  clock.js  clok.js  clok1.js  closure.js  ftp_upload.js  json_fs.js  json_simple.js  lv_img.js  lvgl_app1.js  lvgl_app2.js  lvgl_btn.js  lvgl_test.js  lvgl_test1.js  lvgl_test2.js  mongo.js  test_fs.js  test_fs2.js  test_gpio.js  upload.js  wifi.js  wifi_lcd.js  wifi_lcd1.js  wifi_safe.js  wifi_scan.js
components/: rede.txt
components/app_manager/: CMakeLists.txt  app_manager.c
components/app_manager/include/: app_manager.h
components/evm_loader/: CMakeLists.txt  evm_loader.c
components/evm_loader/include/: evm_loader.h
components/evm_modules/: CMakeLists.txt  evm_module.c  evm_module_console.c  evm_module_fs.c  evm_module_ftp.c  evm_module_gpio.c  evm_module_json.c  evm_module_lvgl.c  evm_module_mongoose.c  evm_module_process.c  evm_module_timer.c  evm_module_wifi.c
components/evm_modules/include/: evm_module.h  evm_module_console.h  evm_module_fs.h  evm_module_ftp.h  evm_module_gpio.h  evm_module_json.h  evm_module_lvgl.h  evm_module_mongoose.h  evm_module_process.h  evm_module_timer.h  evm_module_wifi.h
components/hardware_manager/: CMakeLists.txt  hardware_manager.c  lcd101.c  sd_card_driver.c  wifi_driver.c
components/hardware_manager/include/: hardware_config.h  hardware_manager.h  lcd101.h  sd_card_driver.h  wifi_driver.h
components/lv-fs/: CMakeLists.txt  lv_fs_fatfs.c  lv_fs_if.c  lv_fs_if.h
components/lvgl/: CMakeLists.txt  library.json  library.properties  lv_conf.h  lv_conf_template.h
components/lvgl/docs/: CHANGELOG.md
components/lvgl/examples/libs/gif/: lv_example_gif_1.c
components/lvgl/src/core/: lv_refr.c
components/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
components/lvgl/src/widgets/: lv_slider.c
components/mongoose/: CMakeLists.txt  ftp_server.c  http_server.c  mqtt_broker.c  mqtt_client.c
components/mongoose/include/: ftp_server.h  http_server.h  mongoose.h  mongoose_common.h  mqtt_broker.h  mqtt_client.h
components/mujs/: AUTHORS  CMakeLists.txt  COPYING  README  jsarray.c  jsdtoa.c  jsi.h  jsobject.c  jsproperty.c  jsrun.c  jsvalue.c  jsvalue.h  mujs.h  pp.c  regexp.h
components/mujs/docs/: examples.html  index.html  introduction.html  license.html  logo.ps  reference.html  style.css
components/shared_hardware/: CMakeLists.txt  shared_hardware.c
components/shared_hardware/include/: shared_hardware.h
main/: CMakeLists.txt  main.c
