# MuJS component
idf_component_register(SRCS 
    "one.c"
    "jsarray.c"
    "jsboolean.c" 
    "jsbuiltin.c"
    "jscompile.c"
    "jsdate.c"
    "jsdtoa.c"
    "jsdump.c"
    "jserror.c"
    "jsfunction.c"
    "jsgc.c"
    "jslex.c"
    "jsmath.c"
    "jsnumber.c"
    "jsobject.c"
    "json.c"
    "jsparse.c"
    "jsproperty.c"
    "jsregexp.c"
    "jsrepr.c"
    "jsrun.c"
    "jsstate.c"
    "jsstring.c"
    "jsvalue.c"
    "regexp.c"
    "utf.c"
    INCLUDE_DIRS "."
    REQUIRES freertos)
    target_compile_options(__idf_mujs PRIVATE -Wno-array-parameter)